--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,25 +41,79 @@ body {
     font-size: 12px;
 }
 .right .header {
-    padding: 96px 12px 24px 12px;
+    padding: 96px 24px 36px 24px;
     font-size: 1.2rem;
     word-spacing: 1px;
+    font-weight: bold;
 }
 
 form {
     background-color: white;
     display: flex;
     flex-direction: column;
-    height: 30%;
-    margin: 20px;
-
+    height: auto;
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+form > label {
+    width: auto;
+    padding-left: 20px;
 }
 fieldset {
     border: none;
-    padding: 0;
+    padding: 12px;
     margin: 0;
+    display: flex;
+    gap: 50px;
 }
 label {
     font-weight: bold;
     width: 100px;
+}
+fieldset .item{
+    display: flex;
+    flex-direction: column;
+}
+fieldset .item label {
+    font-size: .8rem;
+    width: auto;
+}
+form .sign-up{
+    padding-top: 15px;
+    padding-left: 13px;
+}
+button {
+    background-color: #748e5e; /* A nice green shade */
+    color: white;
+    padding: 10px 30px;
+    border: none;
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+  
+button:hover {
+    background-color: #5a7544; /* Slightly darker green on hover */
+}
+
+input:focus {
+    background-color: rgba(213, 213, 221, 0.3);
+}
+
+/* input:valid {
+    background-color: greenyellow;
+}
+
+input:invalid {
+    background-color: lightcoral;
+} */
+
+
+
+
+
+.actions {
+    padding-top: 50px;
+    padding-left: 20px;
 }
