--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,10 +29,13 @@ body {
     flex: 3 1 70%; /* Grow 3x, Shrink 1x, Start at 60% */
     background-color: rgb(248,252,253);
 }
-
+.logo {
+    padding-top: 80px;
+    width: 80px;
+}
 .left h1 {
     background-color: rgba(239, 239, 240, 0.3);
-    margin-top: 150px;
+    margin-top: 25px;
     font-size: 2.5rem;
 }
 .left .credits {
@@ -57,11 +60,12 @@ form {
 }
 form > label {
     width: auto;
-    padding-left: 20px;
+    padding-left: 24px;
 }
 fieldset {
     border: none;
     padding: 12px;
+    padding-left: 24px;
     margin: 0;
     display: flex;
     gap: 50px;
@@ -80,7 +84,7 @@ fieldset .item label {
 }
 form .sign-up{
     padding-top: 15px;
-    padding-left: 13px;
+    padding-left: 24px;
 }
 button {
     background-color: #748e5e; /* A nice green shade */
@@ -115,5 +119,15 @@ input:invalid {
 
 .actions {
     padding-top: 50px;
-    padding-left: 20px;
+    padding-left: 24px;
+}
+
+a:link {
+    text-decoration: none;
+}
+a:link {
+    color: #748e5e;
+}
+a:hover {
+    color: #5a7544;
 }
