--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ body {
 
 .left {
     flex: 2 1 30%;
-    background-image: url(/img/halie-west-25xggax4bSA-unsplash.jpg);
+    background-image: url(https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?q=80&w=1862&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: cover; /* Ensures the image fully covers the div */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents tiling */
