--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@ body {
 
 .left {
     flex: 2 1 30%;
-    background-image: url(/img/halie-west-25xggax4bSA-unsplash.jpg);
+    background-image: url(/sign-up-form-main/img/halie-west-25xggax4bSA-unsplash.jpg);
     background-size: cover; /* Ensures the image fully covers the div */
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents tiling */
@@ -114,8 +114,15 @@ input:invalid {
 } */
 
 
+.pwrod:invalid {
+    border: 1px solid red;
+    border-color: red;
+}
 
-
+input:focus {
+    border: 2px solid blue;
+    box-shadow: -1px 3px #888888;
+}
 
 .actions {
     padding-top: 50px;
